changed to tolist
Change-Id: Ia7d830740258abac3142f09cdc35cf9ed4690f88